influx-prome-grafana/simple-webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
  labels:
    app: simple-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
        - name: simple-server
          image: rifqoi/simpleservice
          ports:
            - containerPort: 9876
---
apiVersion: v1
kind: Service
metadata:
  name: simple-server-service
spec:
  selector:
    app: simple-server
  type: LoadBalancer
  ports:
    - port: 9876
      targetPort: 9876
      nodePort: 30000
      protocol: TCP
