influx-prome-grafana/influxdb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  serviceName: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - image: influxdb:2.0.6
          name: influxdb
          ports:
            - containerPort: 8086
              name: influxdb
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: influxdb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  type: ClusterIP
  ports:
    - name: influxdb
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: influxdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: influxdb
spec:
  rules:
    - http:
        paths:
          - path: /influxdb(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
