influx-prome-grafana/simple-webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /myservice(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: simple-server-service
                port:
                  number: 9876
